--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--navbar-->
     <nav id="navbar">
         <h1><<</h1>
-        <label class="logo">Memewala</label>
+        <label class="logo">logo</label>
             <input type="text" class="search" placeholder="search a friend">
     </nav>
     <!--first part-->
@@ -22,6 +22,20 @@
             <!--friend hisabe add hole msg option ta on hbe-->
             <!-- <input type="text" placeholder="sent message"> -->
         </div>
+
+        <!--second part-->
+
+        <div class="posts">
+            <div class="my_post">
+                <h1>my post</h1>
+            </div>
+            <div class="share">
+                <h1>
+                    share with me
+                </h1>
+            </div>
+        </div>
+
 
 </body>
 </html>
