--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--first part-->
         <div class="profile">
             <img class="dp" src="argha.jpg" alt="">
-            <a href=""  class="name">  Argha  Dutta</a>
+            <a href="#"  class="name">  Argha  Dutta</a>
             <button class="add">add</button>
             <!--friend hisabe add hole msg option ta on hbe-->
             <!-- <input type="text" placeholder="sent message"> -->
@@ -27,12 +27,10 @@
 
         <div class="posts">
             <div class="my_post">
-                <h1>my post</h1>
+                <a href="#">my post</a>
             </div>
             <div class="share">
-                <h1>
-                    share with me
-                </h1>
+                <a href="#">share with me</a>
             </div>
         </div>
 
