--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
         <div class="profile">
             <img class="dp" src="argha.jpg" alt="">
             <a href="#"  class="name">  Argha  Dutta</a>
-            <button class="add">add</button>
+            <div class="bio">
+                <h2>argha_dutta05</h2>
+                <h3>this is bio</h3>
+                <p>this is location</p>
+                <p>date of join</p>
+        </div>
+            <button class="edit">edit profile</button>
             <!--friend hisabe add hole msg option ta on hbe-->
             <!-- <input type="text" placeholder="sent message"> -->
         </div>
@@ -34,6 +40,6 @@
             </div>
         </div>
 
-
+      
 </body>
 </html>
